--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -1,3 +1,5 @@
+.SILENT:
+
 NAME := libft.a
 
 COMPILER := cc
@@ -45,9 +47,8 @@ ft_printf/ft_putnbr.c\
 ft_printf/ft_putstr.c\
 ft_printf/ft_put_u.c\
 ft_printf/ft_put_voidp.c\
-get_next_line/get_next_line_utils.c\
-get_next_line/get_next_line.c\
-get_next_line/get_next_line.h
+get_next_line_utils.c\
+get_next_line.c
 
 OBJS := $(SRCS:%.c=%.o)
 
