--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -48,7 +48,8 @@ ft_printf/ft_putstr.c\
 ft_printf/ft_put_u.c\
 ft_printf/ft_put_voidp.c\
 get_next_line_utils.c\
-get_next_line.c
+get_next_line.c\
+ft_swap.c
 
 OBJS := $(SRCS:%.c=%.o)
 
